# ba2024_body_shape_estimation

./: .gitattributes  .gitignore  Blender_Project_Calculate-IOU.blend  Blender_Project_MakeHumanSilhouettes_w_parameter.blend  Blender_Script_BA-2024_IOU.py  Blender_Script_BA2024_MakeHuman_and_render_silhouette.py  README.md  pyproject.toml
Data/table_combinations/: combinations_table.csv
ba/: __init__.py  ba.sh  ba2.sh  ba3.sh  ba4.sh  create_data_table.py  data_loader_front_view.py  fbn_model.py  hsn_model.py  load_model.py  main.py  metric-csv.py  topk_image_visualization.ipynb
ba/output_old/: 2025-03-05 22-54_LR=9e-05_RMSprop_FB_model_dropout_on_epochs=100-predictedParameter.csv  2025-03-05-15-11-00_mixedLRS_predictedParameter.csv  2025-06-03_HSN-Model_Adadelta_LR9.0_Epochs100_w-sigmoid_predictedParameter.csv  2025-07-03_FB-Model_Adadelta_LR9.0_Epochs101_dropout-off_predictedParameter.csv  2025-07-03_HSN-Model_Adadelta_LR0.03_Epochs101_dropout-off_sigmoid_on_predictedParameter.csv  2025-08-03_FB-Model_RMSprop_LR0.0005_Epochs301_dropout-off_sigmoid_on_predictedParameter.csv  2025-09-03_FB-Model_Adadelta_LR9.0_Epochs301_2nddropout 0.3_rest-off__sigmoid_on_predictedParameter.csv  2025-09-03_FB-Model_Adadelta_LR9.0_Epochs501_dropout-on_sigmoid_on_predictedParameter.csv  2025-10-03_FB-Model_Adadelta_LR9.0_Epochs501_dropout-off_sigmoid_on_predictedParameter.csv  2025-12-03_HSN-Model_RMSprop_LR0.00003_Epochs501_dropout-off_sigmoid_on_predictedParameter.csv  (+7 more)
saved_model/: model_epoch_501.pth
